--- a/index.html
+++ b/index.html
@@ -14,47 +14,43 @@
 
             <div id="flex">
                 <aside id="leftSidebar">
-                    <h2>Updates</h2>
+                    <h2>Updates (status.cafe)</h2>
                     <div class="box">
-                        <p>I have recently updated this tool as of August 2022!</p>
-                        <ul style="padding-left:10px;">
-                            <li>Rewrote the JS to generate cleaner code</li>
-                            <li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
-                            <li>Added a couple of new features!</li>
-                            <li>Old version is still available <a href="old.html" target="_blank">here</a></li>
-                        </ul>
+                      <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=felixlovestv" defer></script>
                     </div>
                     <h2>Hi there!</h2>
-                    <h3>Other Tools</h3>
+                    <h3>Social links</h3>
                     <ul>
-                        <li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
-                        </li><li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
-                        <li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
-                        <li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
-                        <li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
+                        <li><a href="https://aus.social/@felixlovestv" target="_blank">Mastodon</a>
+                        </li><li><a href="example.com" target="_blank">Coming soon</a></li>
+                        <li><a href="https://www.youtube.com/@Felixplaystoca" target="_blank">Youtube</a></li>
+                        <li><a href="https://www.tiktok.com/@felixlovestv" target="_blank">tiktok</a></li>
                     </ul>
                 </aside>
                 <main>
-                    <h1>Welcome to my Layout Maker!</h1>
+                    <h1>Welcome to my website</h1>
                     <p><strong>Please read this first!</strong></p>
-                    <p>This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns above to customize your layout's general features. Click the button to generate your HTML and CSS, and paste it into a file on Neocities.</p>
-                    <p>Then you can replace all of the text with your own. For more customization, the CSS code has comments to explain what each part changes. Please read through the code - even if you have no idea what it means.</p>
-                    <p>If you're feeling up for a challenge, I put together <a href="/sadgrl/learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which goes over the structure of how this layout is built, along with some specific tips on how to edit it in certain ways.</p>
-                    <p>Check the links in the sidebar for more resources to build your own website!</p>
-
-                    <p> - Cat Ipsum - </p>
-                    <p>Rub my belly hiss swipe at owner's legs sniff catnip and act crazy growl at dogs in my sleep sit on the laptop for hiss at vacuum cleaner i like to spend my days sleeping and eating fishes that my human fished for me.</p>
-
-                    <p>Head nudges eat my own ears. Hey! you there, with the hands why can't i catch that stupid red dot, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff, or roll over and sun my belly curl up and sleep on the freshly laundered towels.</p>
-
-
+                    <p>Hi! My name is felix and this is my website &#127872;</p>
+                    <h1>Latest toca boca video</h1>
+                    <p>Coming soon!</p>
                 </main>
                 
             </div>
-            <footer id="footer">CC0 Public Domain, 2022</footer>
+            <footer id="footer">CC0 Public Domain, 2025</footer>
         </div>
         <!-- THIS IS THE CSS !-->
         <style>
+          #statuscafe {
+    padding: .5em;
+    background-color: azure;
+    border: 1px solid midnightblue;
+}
+#statuscafe-username {
+    margin-bottom: .5em;
+}
+#statuscafe-content {
+    margin: 0 1em 0.5em 1em;
+}
             /* user styles */
 
             /* styles are what change the color and sizes of stuff on your site. */
