--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     the images as variables */
 
             :root {
-                --header-image: url('https://sadhost.neocities.org/images/layouts/wp.jpeg');
+                --header-image: url('Felix online.png');
                 --body-bg-image: url('https://sadhost.neocities.org/images/tiles/purplesky.gif');
 
                 /* colors */
