--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
       <title>Felix online</title>
     </head>
     <body>
-       <div id="container"><div id="topBar">You can put some text or images (or even a good old-fashioned marquee) up here!</div>
+       <div id="container"><div id="topBar"><marquee scrollamount="4" direction="left">
+    <a href="https://felixmoyle77.neocities.org/"><img src="download.png"></a>
+    <a href="https://www.neocities.org/"><img src="https://sugarforbrains.neocities.org/img/88x31/neo.png"></a>
+    <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
+    <img src="https://adriansblinkiecollection.neocities.org/buttons/3.gif">
+    <img src="https://adriansblinkiecollection.neocities.org/buttons/4.jpg">
+    <img src="https://adriansblinkiecollection.neocities.org/buttons/a6.gif">
+    <img src="https://adriansblinkiecollection.neocities.org/buttons/a7.gif">
+    <a href="https://plasticdino.neocities.org"><img src="https://plasticdino.neocities.org/buttons/plasticdino.gif"></a>
+    <img src="https://plasticdino.neocities.org/buttons/barbie2.gif">
+    <img src="https://plasticdino.neocities.org/buttons/cbbc3.gif">
+    <img src="https://plasticdino.neocities.org/buttons/graphicdesign.png">
+    <img src="https://adriansblinkiecollection.neocities.org/buttons/e1.png">
+    <a href="https://neonnights.neocities.org/"><img src="https://neonnights.neocities.org/sayhi.gif" alt="Say Hi!"></a>
+    <img src="https://adriansblinkiecollection.neocities.org/buttons/f7.gif">
+    <a href="https://bisha.neocities.org"><img src="/images/bisha.gif"></a>
+    <img src="Censor_NYRc.gif">
+    <img src="https://foggybear42.neocities.org/images/graphics/buttons/autismnow.png">
+    </marquee></div>
             <div id="headerArea">
                 <div id="header"></div>
                 
