--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@
             /* this is the color of the main content area,
     between the sidebars! */
             main {
-                background-color: #43256E;
+              /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fcecfc+0,fba6e1+50,fd89d7+51,ff7cd8+100;Pink+Gloss+%232 */
+background: linear-gradient(to bottom,  rgba(252,236,252,1) 0%,rgba(251,166,225,1) 50%,rgba(253,137,215,1) 51%,rgba(255,124,216,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+;
                 flex: 1;
                 padding: 20px;
                 order: 2;
@@ -286,7 +288,7 @@
 
             #topBar {
                 width: 100%;
-                height: 35.4px;
+                height: 35.8px;
                 padding: 10px;
                 font-size: smaller;
                 background-color: #13092D;
