--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@ background: linear-gradient(to bottom,  rgba(252,236,252,1) 0%,rgba(251,166,225,
 
             */ #leftSidebar {
                 order: 1;
+              /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cb60b3+0,c146a1+50,a80077+51,db36a4+100;Pink+Gloss */
+background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
             }
 
             #rightSidebar {
@@ -291,7 +294,9 @@ background: linear-gradient(to bottom,  rgba(252,236,252,1) 0%,rgba(251,166,225,
                 height: 35.8px;
                 padding: 10px;
                 font-size: smaller;
-                background-color: #13092D;
+               /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cb60b3+0,c146a1+50,a80077+51,db36a4+100;Pink+Gloss */
+background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
             }
 
 
