--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <style>
           #statuscafe {
     padding: .5em;
-    background-color: azure;
-    border: 1px solid midnightblue;
+    background-color: #13092D;
+    
 }
 #statuscafe-username {
     margin-bottom: .5em;
@@ -291,7 +291,7 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
 
             #topBar {
                 width: 100%;
-                height: 35.8px;
+                height: 36px;
                 padding: 10px;
                 font-size: smaller;
                /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cb60b3+0,c146a1+50,a80077+51,db36a4+100;Pink+Gloss */
