--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 --body-bg-image: url('https://sadhost.neocities.org/images/tiles/purplesky.gif');
 
                 /* colors */
-                --content: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%);
+                background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%);
             }
 
             /* if you have the URL of a font, you can set it below */
@@ -291,8 +291,8 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
 
             #topBar {
                 width: 100%;
-                height: 36px;
-                padding: 9px;
+                height: 38px;
+                padding: 5px;
                 font-size: smaller;
                /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cb60b3+0,c146a1+50,a80077+51,db36a4+100;Pink+Gloss */
 background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
