--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <a href="https://bisha.neocities.org"><img src="/images/bisha.gif"></a>
     <img src="Censor_NYRc.gif">
     <img src="https://foggybear42.neocities.org/images/graphics/buttons/autismnow.png">
-    </marquee></div>
+    </marquee>
+       <p>(<b>Home</b>) (Art) (Videos) (Pinterest) (More)</p></div>
             <div id="headerArea">
                 <div id="header"></div>
                 
@@ -290,7 +291,7 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
 
             #topBar {
                 width: 100%;
-                height: 38px;
+                height: fit-content;
                 padding: 5px;
                 font-size: smaller;
                /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cb60b3+0,c146a1+50,a80077+51,db36a4+100;Pink+Gloss */
