--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         </li><li><a href="example.com" target="_blank">Coming soon</a></li>
                         <li><a href="https://www.youtube.com/@Felixplaystoca" target="_blank">Youtube</a></li>
                         <li><a href="https://www.tiktok.com/@felixlovestv" target="_blank">tiktok</a></li>
+                        <li><a href="https://www.instagram.com/felix_lovestv/" target="_blank">insta</a></li>
                     </ul>
                 </aside>
                 <main>
