--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="Censor_NYRc.gif">
     <img src="https://foggybear42.neocities.org/images/graphics/buttons/autismnow.png">
     </marquee>
-       <p>(<b>Home</b>) (Art) (Videos) (Pinterest) (More)</p></div>
+       <p>(<b>Home</b>) (Art) (Videos) (Pinterest) (More) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
             <div id="headerArea">
                 <div id="header"></div>
                 
