--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             :root {
                 --header-image: url('Felix online.png');
-                --body-bg-image: url('https://sadhost.neocities.org/images/tiles/purplesky.gif');
+                --body-bg-image: url('>_<!!.jpg');
 
                 /* colors */
                }
