--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                 margin: 0;
                 background-color: #08031A;
                 /* you can delete the line below if you'd prefer to not use an image */
-                background-size: 65px;
+                background-size: 100%;
+                background-type: fill;
                 color: #fceaff;
                 background-image: var(--body-bg-image);
             }
