--- a/art.html
+++ b/art.html
@@ -49,7 +49,9 @@
                 </aside>
                 <main>
                     <h1>Welcome to the art page</h1>
-                    <p>Coming soon</p>
+                    <img src="1868017_4OZVhKS-.png" width="500px">
+                    <img src="1868017_oOcBuVtq-.png" width="500px">
+                    <img src="1987953_cjqnZGq6.png" width="600px">
                 </main>
                 
             </div>
