--- a/art.html
+++ b/art.html
@@ -25,7 +25,7 @@
     <img src="Censor_NYRc.gif">
     <img src="https://foggybear42.neocities.org/images/graphics/buttons/autismnow.png">
     </marquee>
-       <p>(<a href="index.html">Home</a>) (<b>Art</b>) (Videos) (Pinterest) (More) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
+       <p>(<a href="index.html">Home</a>) (<b>Pics</b>) (Videos) (Pinterest) (More) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
             <div id="headerArea">
                 <div id="header"></div>
                 
@@ -48,10 +48,9 @@
                     </ul>
                 </aside>
                 <main>
-                    <h1>Welcome to the art page</h1>
-                    <img src="1868017_4OZVhKS-.png" width="400px">
-                    <img src="1868017_oOcBuVtq-.png" width="300px">
-                    <img src="1987953_cjqnZGq6.png" width="300px">
+                    <h1>Welcome to the pictures page</h1>
+                    <h2>Pics from instagram and website exclusives</h2>
+                    <p>Coming soon :)</p>
                 </main>
                 
             </div>
