--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </ul>
                   <h3>Add my button</h3>
                   <a href="https://felix.moyle-cloud.com/"><img src="download.png"></a>
-                  <code id="buttonSnippet" contenteditable="true">&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="download.png"&gt;&lt;/a&gt;</code>
+                  <div class="box"><p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="download.png"&gt;&lt;/a&gt;</p></div>
                 </aside>
                 <main>
                     <h1>Welcome to my website</h1>
