--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </aside>
                 <main>
                     <h1>Welcome to my website</h1>
-                    <p><strong>Please read this first!</strong></p>
+                  
                     <p>Hi! My name is felix and this is my website &#127872;</p>
                     <h1>Latest toca boca video</h1>
                     <iframe
@@ -310,6 +310,7 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
                 border: 1px solid #ED64F5;
                 padding: 10px;
               height: 27px;
+              display: inline-block;
             }
             /* CSS for extras */
 
