--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
        <div id="container"><div id="topBar"><marquee scrollamount="4" direction="left">
     <a href="https://felix.moyle-cloud.com/"><img src="download.png"></a>
-    <a href="https://www.neocities.org/"><img src="https://sugarforbrains.neocities.org/img/88x31/neo.png"></a>
+         <a href="https://status.cafe"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
     <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
     <img src="https://adriansblinkiecollection.neocities.org/buttons/3.gif">
     <img src="https://adriansblinkiecollection.neocities.org/buttons/4.jpg">
