--- a/art.html
+++ b/art.html
@@ -50,11 +50,12 @@
                 <main>
                     <h1>Welcome to the pictures page</h1>
                     <h2>Pics from instagram and website exclusives</h2>
-                   <img src="481517097_17847031059421949_801710629093888107_n.jpg" width="340px">
-                   <img src="-7.jpg" width="340px">
-                   <img src="482195802_17847369000421949_1745835738838432855_n.jpg" width="340px">
-                  <img src="IMG_91AA331FFC18-1.jpeg" width="340px">
-                  <img src="IMG_54DB76A6274E-1.jpeg" width="340px">
+                   <img src="481517097_17847031059421949_801710629093888107_n.jpg" width="330px">
+                   <img src="-7.jpg" width="330px">
+                   <img src="482195802_17847369000421949_1745835738838432855_n.jpg" width="330px">
+                  <img src="IMG_91AA331FFC18-1.jpeg" width="330px">
+                  <img src="IMG_54DB76A6274E-1.jpeg" width="330px">
+                  <img src="download20250202102958.png" width="330px">
                 </main>
                 
             </div>
