--- a/art.html
+++ b/art.html
@@ -38,6 +38,7 @@
                   <img src="IMG_91AA331FFC18-1.jpeg" width="300px">
                   <img src="IMG_54DB76A6274E-1.jpeg" width="330px">
                   <img src="download20250202102958.png" width="300px">
+                  <img src="download20241000210309.png" width="300px">
                 </main>
                 
             </div>
