--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Felix online</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
     </head>
     <body>
        <div id="container"><div id="topBar"><marquee scrollamount="4" direction="left">
@@ -143,7 +146,7 @@
             }
 
             body {
-                font-family: 'Nunito', sans-serif;
+                font-family: "Calistoga", serif;
                 margin: 0;
                 background-color: #08031A;
                 /* you can delete the line below if you'd prefer to not use an image */
