--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     if you want to style them separately,
     create styles for #leftSidebar and #rightSidebar */
             aside {
-                background-color: #241445;
+                
                 width: 200px;
                 padding: 20px;
                 font-size: smaller;
@@ -300,6 +300,9 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
             h1 {
                 font-size: 25px;
             }
+          p.main {
+           color: #ed64f5;
+          }
 
             strong {
                 /* this styles bold text */
