--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ background: linear-gradient(to bottom,  rgba(252,236,252,1) 0%,rgba(251,166,225,
             h1 {
                 font-size: 25px;
             }
-          p.main {
+          main p {
            color: #ed64f5;
           }
 
