--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </ul>
                   <h3>Add my button</h3>
                   <a href="https://felix.moyle-cloud.com/"><img src="download.png"></a>
-                  <div class="box2"><p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="download.png"&gt;&lt;/a&gt;</p></div>
+                  <p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="download.png"&gt;&lt;/a&gt;</p>
                 </aside>
                 <main>
                     <h1>Welcome to my website</h1>
