--- a/art.html
+++ b/art.html
@@ -4,6 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Felix online</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
     </head>
     <body>
        <div id="container"><div id="topBar">
@@ -48,7 +51,7 @@
         <style>
           #statuscafe {
     padding: .5em;
-    background-color: #13092D;
+    background-color: #dd2d4a;
     
 }
 #statuscafe-username {
@@ -108,7 +111,7 @@
             }
 
             body {
-                font-family: 'Nunito', sans-serif;
+                font-family: "Calistoga", serif;
                 margin: 0;
                 background-color: #08031A;
                 /* you can delete the line below if you'd prefer to not use an image */
@@ -207,7 +210,7 @@
     if you want to style them separately,
     create styles for #leftSidebar and #rightSidebar */
             aside {
-                background-color: #241445;
+                background-color: #f26a8d;
                 width: 200px;
                 padding: 20px;
                 font-size: smaller;
@@ -270,7 +273,7 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
 
             /* this is just a cool box, it's the darker colored one */
             .box {
-                background-color: #13092D;
+                background-color: #dd2d4a;
                 border: 1px solid #ED64F5;
                 padding: 10px;
             }
