--- a/index.html
+++ b/index.html
@@ -245,12 +245,11 @@
     if you want to style them separately,
     create styles for #leftSidebar and #rightSidebar */
             aside {
-                
+                background-color: #f26a8d;
                 width: 200px;
                 padding: 20px;
                 font-size: smaller;
-             background: linear-gradient(to bottom,  rgba(235,233,249,1) 0%,rgba(216,208,239,1) 50%,rgba(206,199,236,1) 51%,rgba(193,191,234,1) 100%);
-
+             
                 /* this makes the sidebar text slightly smaller */
             }
 
