--- a/art.html
+++ b/art.html
@@ -214,6 +214,7 @@
                 width: 200px;
                 padding: 20px;
                 font-size: smaller;
+                color: f49cbb;
                 /* this makes the sidebar text slightly smaller */
             }
 
