--- a/art.html
+++ b/art.html
@@ -217,7 +217,9 @@
                 color: f49cbb;
                 /* this makes the sidebar text slightly smaller */
             }
-
+aside h1,h2,h3,p {
+  color: f49cbb;
+}
 
             /* this is the color of the main content area,
     between the sidebars! */
