--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@
              
                 /* this makes the sidebar text slightly smaller */
             }
-
+aside h1,h2,h3,p {
+  color: #ffffff;
+}
 
             /* this is the color of the main content area,
     between the sidebars! */
