--- a/art.html
+++ b/art.html
@@ -217,16 +217,11 @@
                 color: f49cbb;
                 /* this makes the sidebar text slightly smaller */
             }
-aside h1,h2,h3,p {
-  color: f49cbb;
-}
 
             /* this is the color of the main content area,
     between the sidebars! */
             main {
-              /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fcecfc+0,fba6e1+50,fd89d7+51,ff7cd8+100;Pink+Gloss+%232 */
-background: linear-gradient(to bottom,  rgba(252,236,252,1) 0%,rgba(251,166,225,1) 50%,rgba(253,137,215,1) 51%,rgba(255,124,216,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-;
+             background-color: #DD2D4A; 
                 flex: 1;
                 padding: 20px;
                 order: 2;
@@ -259,11 +254,9 @@ background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1)
                 /* this centers the footer text */
             }
 
-            h1,
-            h2,
-            h3 {
-                color: #ED64F5;
-            }
+            h1,h2,h3,p {
+  color: #ffffff;
+}
 
             h1 {
                 font-size: 25px;
