--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <style>
           #statuscafe {
     padding: .5em;
-    background-color: #13092D;
+    background-color: #dd2d4a;
     
 }
 #statuscafe-username {
