--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             /* the area below is for all links on your page
     EXCEPT for the navigation */
             #container a {
-                color: #ED64F5;
+                color: #CBEEF3;
                 font-weight: bold;
                 /* if you want to remove the underline
       you can add a line below here that says:
