--- a/art.html
+++ b/art.html
@@ -45,7 +45,7 @@
                 </main>
                 
             </div>
-            <footer id="footer">CC0 Public Domain, 2025</footer>
+            <footer id="footer"><nobr>Made by felix<img src="https://i.postimg.cc/gc5MkX6x/ocean-5-stripe.png"></nobr></footer>
         </div>
         <!-- THIS IS THE CSS !-->
         <style>
