--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                   <p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="download.png"&gt;&lt;/a&gt;</p>
                 </aside>
                 <main>
+                  <img src="uc4.gif">
                     <h1>Welcome to my website</h1>
                   
                     <p>Hi! My name is felix and this is my website &#127872;</p>
@@ -74,8 +75,13 @@
 </script>
         <div style="width: 150px; /* <- Set any width you'd like! */">
   <script src="https://jeith.com/assets/webring/wii-ring.js"></script>
-  <wii-ring site="YOUR URL HERE"></wii-ring>
+  <wii-ring site="https://felix.moyle-cloud.com/"></wii-ring>
 </div>
+                   <img src="https://iceconey14.github.io/misc-webring2/misc-ring.gif" usemap="#image-map">
+<map name="image-map">
+    <area target="" alt="prev" title="prev" href="https://miscri.netlify.app/webring.html?action=prev" coords="27,7,39,17" shape="rect">
+    <area target="" alt="next" title="next" href="https://miscri.netlify.app/webring.html?action=next" coords="110,7,122,17" shape="rect">
+</map>
 
                 </main>
                 
