--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
     </head>
     <body>
+      <!-- SCM Music Player https://www.scmplayer.net -->
+<script type="text/javascript" src="https://www.scmplayer.net/script.js" 
+data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Sophie Ellis-Bextor - Murder On The Dancefloor (Lyric Video)','url':'https://www.youtube.com/watch?v=Brih4MyYgpE'},{'title':'Obsessed - sped up + lyrics','url':'https://www.youtube.com/watch?v=etH9jdmOqHc'},{'title':'%uD835%uDDD4%uD835%uDDF9%uD835%uDDF9 %uD835%uDDFC%uD835%uDDF3 %uD835%uDE01%uD835%uDDF5%uD835%uDDF2 %uD835%uDDDF%uD835%uDDF6%uD835%uDDF4%uD835%uDDF5%uD835%uDE01%uD835%uDE00 (%uD835%uDE00%uD835%uDDFD%uD835%uDDF2%uD835%uDDF1 %uD835%uDE02%uD835%uDDFD)','url':'https://www.youtube.com/watch?v=zXM4EEqs5_8'},{'title':'Mary J. Blige - I%27m Goin%27 Down','url':'https://www.youtube.com/watch?v=1XmwiwQjU8E'},{'title':'messages from the stars %u2501 rah band ( sped up )','url':'https://www.youtube.com/watch?v=6Q0z7lVMmYc'},{'title':'Crystal Waters - Gypsy Woman (She%27s Homeless) (Official Music Video)','url':'https://www.youtube.com/watch?v=_KztNIg4cvE'},{'title':'PAWSA & Adventures of Stevie V - Dirty Cash (Money Talks)','url':'https://www.youtube.com/watch?v=vP-Z0VEC0RA'},{'title':'the sweet escape - gwen stefani (sped up/nightcore)','url':'https://www.youtube.com/watch?v=Quc_B9pMjOs'}]}" ></script>
+<!-- SCM Music Player script end -->
        <div id="container"><div id="topBar"><marquee scrollamount="4" direction="left">
     <a href="https://felix.moyle-cloud.com/"><img src="download.png"></a>
          <a href="https://status.cafe"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
