--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
                     </ul>
                   <h3>Add my button</h3>
                   <a href="https://felix.moyle-cloud.com/"><img src="download.png"></a>
-                  <p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="download.png"&gt;&lt;/a&gt;</p>
+                  <p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="https://felix.moyle-cloud.com/download.png"&gt;&lt;/a&gt;</p>
                 </aside>
                 <main>
                   <img src="uc4.gif">
