--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
   <script src="https://jeith.com/assets/webring/wii-ring.js"></script>
   <wii-ring site="https://felix.moyle-cloud.com/"></wii-ring>
 </div>
+                  <script src="https://autistbh.neocities.org/webring/webringblinkpng.js"></script><ring-114 site="https://felix.moyle-cloud.com"></ring-114>
                    <img src="https://iceconey14.github.io/misc-webring2/misc-ring.gif" usemap="#image-map">
 <map name="image-map">
     <area target="" alt="prev" title="prev" href="https://miscri.netlify.app/webring.html?action=prev" coords="27,7,39,17" shape="rect">
