--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
   <script src="https://jeith.com/assets/webring/wii-ring.js"></script>
   <wii-ring site="https://felix.moyle-cloud.com/"></wii-ring>
 </div>
-                  <img src="tumblr_41bfe4cd72b0dce84ac7504120231f81_89c618d9_1280-removebg-preview.png" syle="float: right;">                  
+                  <img src="tumblr_41bfe4cd72b0dce84ac7504120231f81_89c618d9_1280-removebg-preview.png" float="right" width="150px">                  
                     <script src="https://autistbh.neocities.org/webring/webringblinkpng.js"></script><ring-114 site="https://felix.moyle-cloud.com"></ring-114>
                    <img src="https://iceconey14.github.io/misc-webring2/misc-ring.gif" usemap="#image-map">
 <map name="image-map">
