--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
                 <div id="header"></div>
                 
             </div>
+         <div id="topBar2">
+           <nobr>
+           <img src="0014-pride.gif">
+           <img src="0113-autism.gif">
+            <img src="0181-confetti.gif">
+           </nobr>
+         </div>
 
             <div id="flex">
                 <aside id="leftSidebar">
@@ -336,6 +343,14 @@ h1,h2,h3,p {
 background: linear-gradient(to bottom,  rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 
             }
+          #topBar2 {
+                width: 100%;
+                height: fit-content;
+                padding: 5px;
+                font-size: smaller;
+               background-color: #4C4C9D;
+            }
+
 
 
             /* BELOW THIS POINT IS MEDIA QUERY */
