--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
            <img src="0113-autism.gif">
             <img src="0181-confetti.gif">
              <img src="0199-instagramlogo.gif">
-             <img src="0202-pinterestlogo.gif">
-             <img src="0203-youtubelogo.gif">
+             <img src="0202-pinterestlogo.gif" width="150px" height="auto">
            </nobr>
          </div>
 
