--- a/art.html
+++ b/art.html
@@ -10,7 +10,7 @@
     </head>
     <body>
        <div id="container"><div id="topBar">
-       <p>(<a href="index.html">Home</a>) (<b>Pics</b>) (Videos) (Pinterest) (More) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
+       <p>(<a href="index.html">Home</a>) (<b>Pics</b>) (Videos) (<a href="pin.html">Pinterest</a>) (More) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
             <div id="headerArea">
                 <div id="header"></div>
                 
