--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
     <img src="Censor_NYRc.gif">
     <img src="https://foggybear42.neocities.org/images/graphics/buttons/autismnow.png">
     </marquee>
-       <p>(<b>Home</b>) (<a href="art.html">Pics</a>) (Videos) (Pinterest) (More) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
+       <p>(<b>Home</b>) (<a href="art.html">Pics</a>) (<span style="color: #99ccff;">Videos</span>) (<a href="pin.html">Pinterest</a>) (<span style="color: #99ccff;">More</span>) (<a href="https://felixlovestv.straw.page" target="_blank">Straw page</a>)</p></div>
             <div id="headerArea">
                 <div id="header"></div>
                 
