--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
                   <p>&lt;a href="https://felix.moyle-cloud.com/"&gt;&lt;img src="https://felix.moyle-cloud.com/download.png"&gt;&lt;/a&gt;</p>
                 </aside>
                 <main>
-                  <img src="uc4.gif">
+                  <marquee scrollamount="4" direction="left">
+                  <img src="Bob's Burgers.webp" height="135px" width="auto">
+                    <img src="Ghosts.jpg" height="135px" width="auto">
+                    <img src="good place.jpeg" height="135px" width="auto">
+                    <img src="good girls.webp" height="135px" width="auto">
+                    <img src="unbreakable.jpeg" height="135px" width="auto">
+                    <img src="1.jpeg" height="135px" width="auto">
+                  </marquee>
                     <h1>Welcome to my website</h1>
                   
                     <p>Hi! My name is felix and this is my website &#127872;</p>
