--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
           
   <div style="width: 150px; /* <- Set any width you'd like! */">
   <script src="https://jeith.com/assets/webring/wii-ring.js"></script>
-  <wii-ring site="https://felix.moyle-cloud.com/"></wii-ring>
+  <wii-ring site="https://felix.moyle-cloud.com/index.html"></wii-ring>
  </div>
                    <script src="https://autistbh.neocities.org/webring/webringblinkpng.js"></script><ring-114 site="https://felix.moyle-cloud.com"></ring-114>
                    <img src="https://iceconey14.github.io/misc-webring2/misc-ring.gif" usemap="#image-map">
