--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
                 </aside>
                 <main>
                   <marquee scrollamount="4" direction="left">
-                  <img src="Bob's Burgers.webp" height="135px" width="auto">
                     <img src="Ghosts.jpg" height="135px" width="auto">
-                    <img src="good place.jpeg" height="135px" width="auto">
                     <img src="good girls.webp" height="135px" width="auto">
+                  <img src="Bob's Burgers.webp" height="135px" width="auto">
+                    <img src="good place.jpeg" height="135px" width="auto">
                     <img src="unbreakable.jpeg" height="135px" width="auto">
                     <img src="1.jpeg" height="135px" width="auto">
                   </marquee>
@@ -90,7 +90,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
           
   <div style="width: 150px; /* <- Set any width you'd like! */">
   <script src="https://jeith.com/assets/webring/wii-ring.js"></script>
-  <wii-ring site="https://felix.moyle-cloud.com/index.html"></wii-ring>
+  <wii-ring site="https://felix.moyle-cloud.com"></wii-ring>
  </div>
                    <script src="https://autistbh.neocities.org/webring/webringblinkpng.js"></script><ring-114 site="https://felix.moyle-cloud.com"></ring-114>
                    <img src="https://iceconey14.github.io/misc-webring2/misc-ring.gif" usemap="#image-map">
