--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
                     <h3>Social links</h3>
                     <ul>
                         <li><a href="https://aus.social/@felixlovestv" target="_blank">Mastodon</a>
-                        </li><li><a href="example.com" target="_blank">Coming soon</a></li>
+                        </li><li><a href="https://spacehey.com/profile?id=2883052" target="_blank">Spacehey &lt;3</a></li>
                         <li><a href="https://www.youtube.com/@Felixplaystoca" target="_blank">Youtube</a></li>
                         <li><a href="https://www.tiktok.com/@felixlovestv" target="_blank">tiktok</a></li>
                         <li><a href="https://www.instagram.com/felix_lovestv/" target="_blank">insta</a></li>
