--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
     <area target="" alt="prev" title="prev" href="https://miscri.netlify.app/webring.html?action=prev" coords="27,7,39,17" shape="rect">
     <area target="" alt="next" title="next" href="https://miscri.netlify.app/webring.html?action=next" coords="110,7,122,17" shape="rect">
 </map>
+         <table><tr><td><a href="https://lopster.neocities.org/roring/lolzers/prev.html?id=133"> <img src="https://lopster.neocities.org/roring/fotos/arrow21.png" height="30"></a></td><td><a href="https://lopster.neocities.org/roring/roring.html"><img src="https://lopster.neocities.org/roring/fotos/widget2.png" width="150"></a></td><td><a href="https://lopster.neocities.org/roring/lolzers/next.html?id=133"><img src="https://lopster.neocities.org/roring/fotos/arrow22.png" height="30"></a></td></tr></table>
        </div>    
                   <div style="float: right;">
         <iframe src="https://www3.cbox.ws/box/?boxid=3541006&boxtag=2OnHeb" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
