--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
                     <img src="good place.jpeg" height="135px" width="auto">
                     <img src="unbreakable.jpeg" height="135px" width="auto">
                     <img src="1.jpeg" height="135px" width="auto">
+                    <img src="Modern_Family_season_11_poster.jpg" height="135px" width="auto">
                   </marquee>
                     <h1>Welcome to my website</h1>
                   
