--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@ data-config="{'skin':'skins/aquaPink/skin.css','volume':50,'autoplay':true,'shuf
         <!-- THIS IS THE CSS !-->
         <style>
           .entry {
-  margin: auto;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
   width: 50%;
   border: 4px solid #ffe4f3;
+  background-color: ffc8fb;
   border-radius: 10px;
   padding: 10px;
 }
