--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ h1,h2,h3,p {
             footer {
                 background-color: #13092D;
                 /* background color for footer */
+              margin-bottom: auto;
                 width: 100%;
                 height: 40px;
                 padding: 10px;
